[package]
name = "anyhow"
version = "1.0.40" # remember to update html_root_url
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Flexible concrete Error type built on std::error::Error"
repository = "https://github.com/dtolnay/anyhow"
documentation = "https://docs.rs/anyhow"
readme = "README.md"
categories = ["rust-patterns"]

[features]
default = ["std"]
std = []

[dependencies]
backtrace = { version = "0.3", optional = true }

[dev-dependencies]
futures = { version = "0.3", default-features = false }
rustversion = "1.0"
syn = { version = "1.0", features = ["full"] }
thiserror = "1.0"
trybuild = { version = "1.0.19", features = ["diff"] }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "doc_cfg"]
