[package]
name = "anyhow"
version = "1.0.103"
authors = ["David Tolnay <dtolnay@gmail.com>"]
categories = ["rust-patterns", "no-std"]
description = "Flexible concrete Error type built on std::error::Error"
documentation = "https://docs.rs/anyhow"
edition = "2021"
keywords = ["error", "error-handling"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/dtolnay/anyhow"
rust-version = "1.68"

[features]
default = ["std"]
std = []
# THIS HAS NO EFFECT. This feature remains to preserve compatibility with the
# old `backtrace` optional dependency that this crate used to have.
backtrace = []

[dev-dependencies]
criterion = { version = "0.7", features = ["html_reports"] }
futures = { version = "0.3", default-features = false }
rustversion = "1.0.6"
syn = { version = "2.0", features = ["full"] }
thiserror = "2"
trybuild = { version = "1.0.108", features = ["diff"] }

[[bench]]
name = "error_cost"
harness = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = [
    "--generate-link-to-definition",
    "--generate-macro-expansion",
    "--extern-html-root-url=core=https://doc.rust-lang.org",
    "--extern-html-root-url=alloc=https://doc.rust-lang.org",
    "--extern-html-root-url=std=https://doc.rust-lang.org",
]
