[package]
name = "anyhow_test"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "test.rs"

[dependencies]
anyhow = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["anyhow/std"]
backtrace = ["anyhow/backtrace"]
